<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.BaseSignInActivity"
    tools:showIn="@layout/activity_sign_in">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            android:layout_gravity="center"
            app:contentPadding="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/list_row_padding"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/signInIdMET"
                    style="@style/METField"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/hint_phone_or_email"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/passwordMET"
                    style="@style/METField"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:hint="@string/hint_password"/>
                <Button
                    android:id="@+id/signInBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:text="@string/sign_in"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

</FrameLayout>
