<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--region Content Layout-->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/bottomViewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                tools:layout_height="100dp"
                tools:background="@color/colorPrimary"/>

            <FrameLayout
                android:id="@+id/topViewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                tools:layout_height="100dp"
                tools:background="@color/colorPrimary"/>

            <FrameLayout
                android:id="@+id/contentViewContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/bottomViewContainer"
                android:layout_below="@id/topViewContainer"
                tools:background="@color/colorAccent"/>


        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <!--endregion-->


    <!--region Loading Layout-->
    <LinearLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:visibility="gone">

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/loadingMessageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_loading"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />


    </LinearLayout>
    <!--endregion-->

    <!--region No Data Layout-->
    <LinearLayout
        android:id="@+id/noDataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:fillViewport="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/noDataIV"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:contentDescription="@string/message_empty_data"
            android:src="@drawable/ic_cloud_queue" />

        <TextView
            android:id="@+id/noDataMessageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_empty_data"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />


    </LinearLayout>
    <!--endregion-->

    <!--region Error Layout-->
    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:fillViewport="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/errorIV"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:contentDescription="@string/message_empty_data"
            android:src="@drawable/ic_cloud_off" />

        <TextView
            android:id="@+id/errorMessageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/message_connection_error"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />


    </LinearLayout>
    <!--endregion-->

    <TextView
        android:id="@+id/statusTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:background="?attr/colorAccent"
        android:textColor="?attr/colorPrimary" />

</FrameLayout>